adding query to add query to dbs
